2016 aug
+ Tune - Images - Use EXIF orientation at image viewer
+ Tune - Images - Apply hard rotation by EXIF data
+ new themes and palettes
+ optional libpoppler support (see README) for text extraction from PDF
+ optional djvu text extractor

+ Tune - Interface - Cursor blink time (msecs), set to zero to turn blinking off
+ Tune - Interface - Cursor width
* Tune pages are scrollable

2016 summer
+ basic Markdown support
+ file path elements in command line to call external program
* palettes fix
* English manual fix by Dr. Tobias Quathamer.
* other fixes

2016
+ Functions - math - Sum by last column

2015/September

*goto line function fixed


2015/July

* qmake prefix option fixed
* built-in calc fixes

2015/April - 41.0.0
+ themes engine
* many fixes

2015/feb
+ New icons set
* source configuration options via qmake has been changed (see README)

2015/jan
+ Functions - Cells - Sort table by column ABC
+ Functions - Cells Swap cells
+ Functions - Cells - Delete by column
+ Functions - Cells - Copy by column[s]
+ Partial Eclipse themes support from http://eclipsecolorthemes.org/ (put them into tea Palettes directory)

2014/december
+ Sorting modes at File Manager
* OS/2 building fixes
* documentation fixes

2014/november

+ single instance application mode
+ new TEA icons
+ Search - From cursor (option, ON by default)
+ Tune - Common - Use Alt key to access main menu (option, default is OFF)
* misc. fixes

2014/june-october

+ File - Notes
+ QML plugins support
+ items from Programs menu can be used with TEA's file manager (for the current file at the File manager)
+ code and docs cleanup
+ Tune - Common - Charset for file open from command line

2014/feb-march
+ Functions - Statistics - Words lengths
+ Programs from Run menu can be opened with "file at cursor". Use %i macro.
For example: gimp %i
Set cursor to filename at the text, then use Run - gimp


2014/jan
+ zip unpacker can work with multiply selected files

2013/nov
* LaTeX support fixes