@@ -3,6 +3,7 @@
 http://semiletov.org/tea
 http://tea.ourproject.org
 https://github.com/psemiletov/tea-qt
+https://vk.com/teaeditor
 
 ===INTRO===
 
