@@ -2,7 +2,8 @@ just ideas:
 
 при переключении темы, иконки меняются только после перезагрузки TEA
 
-FIX: Edit - Comment
+test Mark all with fuzzy
+
 file compare
 tmtheme support
 filesToolbar странно меняет размер иконки
